# deep-visual-search-workshop-infra

./: .gitignore  README.md  app.py  cdk-bootstrap-to.sh  cdk-deploy-to.sh  cdk-synth-to.sh  cdk.context.json  cdk.json  requirements.txt
backend/: index.py  pyproject.toml
ee-accounts-infra/: team_accounts_cfn.yaml
frontend/: package-lock.json  package.json
frontend/src/: App.js
frontend/src/config/: index.js
sagemaker_studio_constructs/: __init__.py
sagemaker_studio_constructs/cf_stack/: domain-template.yaml
tests/unit/: test_visual_search_engine_infra_stack.py
visual_search_engine_infra/: visual_search_engine_frontend_stack.py  visual_search_engine_infra_stack.py
